# For an explanation of this file's format, see:
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
description = "Created by Jeff, per Aneesh's tutorial"
repository = "git@github.com:jeffs/intro-rust-wasm.git"
license = "UNLICENSED"

authors = [
    "Aneesh Saripalli <aneeshsaripalli@gmail.com>",
    "Jeff Schwab <jeff@unbuggy.com>",
]

documentation = "https://medium.com/swlh/intro-to-webassembly-in-react-with-rust-d067408231b9"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.34"
